Fix styling for new event form on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,14 @@
 }
 
 .button {
+  box-sizing: content-box;
   background-color: #426dd1;
   border-radius: 0.25rem;
   padding: 1rem 1.5rem;
   border: none;
   color: #f6f7f9;
   font-weight: bold;
+  line-height: 1.25rem;
 }
 
 .button:disabled {
