--- a/src/components/buttons/link/LinkBtn.css
+++ b/src/components/buttons/link/LinkBtn.css
@@ -7,6 +7,7 @@
   font-weight: bold;
   text-decoration: none;
   line-height: 1.5rem;
+  text-align: center;
 }
 
 .linkBtn.linkBtn_danger {
