--- a/src/components/forms/NewEventForm/NewEventForm.css
+++ b/src/components/forms/NewEventForm/NewEventForm.css
@@ -46,3 +46,28 @@
   text-align: center;
   font-size: 10rem;
 }
+
+.event-submit_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+@media (max-width: 767px) {
+  .event-new {
+    min-width: 200px;
+    border-radius: 1.75rem;
+  }
+
+  .button,
+  .linkBtn {
+    box-sizing: border-box;
+    display: block;
+    margin: 1rem 0;
+    width: 100%;
+  }
+
+  .event-filler {
+    display: none;
+  }
+}
